--- a/AppJS/LifeCounter/app.css
+++ b/AppJS/LifeCounter/app.css
@@ -14,7 +14,7 @@ div {
 button {
 	/*border-radius: 15px;
 	border: 3px solid black;*/
-	border: 0px;
+	border: 1px solid black;
 	text-decoration: underline;
 	background: none;
 	padding: 0px;
@@ -58,13 +58,13 @@ button:active {
 }
 
 .init_score_btn_left {
-	border-top-left-radius: 15px;
-	border-bottom-left-radius: 15px;
+	/*border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;*/
 	border-left: 1px solid;
 }
 
 .init_score_btn_right {
-	border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px;
+	/*border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;*/
 	border-right: 1px solid;
 }
