--- a/AppJS/Chess/app.css
+++ b/AppJS/Chess/app.css
@@ -22,12 +22,6 @@ button {
 	z-index: 9999999;
 }
 
-.score_btn {
+button {
 	border: 0px;
-	opacity: 0.5;
-}
-
-.score_btn:active {
-	opacity: 0.5;
-	background: white;
 }
