--- a/AppJS/LifeCounter/app.css
+++ b/AppJS/LifeCounter/app.css
@@ -29,6 +29,12 @@ button:active {
 	z-index: 9999999;
 }
 
+.align_left {
+	padding: 10px;
+	justify-content: initial !important;
+	text-align: left;
+}
+
 .score_btn {
 	border-radius: 0px;
 	border: 0px;
