LifeCounter [FEATURE] Change style to W10 Dark
This moves a lot of color/style definitions to css and we're using
classes now.

--- a/AppJS/LifeCounter/app.css
+++ b/AppJS/LifeCounter/app.css
@@ -15,6 +15,7 @@ button {
 	background: none;
 	padding: 0px;
 	margin: 0px;
+	border: 0px;
 }
 
 button:active {
@@ -47,26 +48,28 @@ button:active {
 	background: white;
 }
 
-.init_score_btn {
-	border: 0px;
-	border-radius: 0px;
-	border-top: 1px solid;
-	border-bottom: 1px solid;
-	text-decoration: none;
+.header {
+	background: rgb(31, 31, 31);
+	color: rgb(176, 176, 176);
 }
 
-.init_score_btn:active {
-	opacity: 0.5;
+.content, .content button {
+	background: #000000;
+	color: rgb(245, 245, 245);
 }
 
-.init_score_btn_left {
-	/*border-top-left-radius: 15px;
-	border-bottom-left-radius: 15px;*/
-	border-left: 1px solid;
+.content input, .content select {
+	text-align: center;
+	background: rgb(31, 31, 31);
+	color: rgb(176, 176, 176);
+	border: 1px solid rgb(176, 176, 176);
 }
 
-.init_score_btn_right {
-	/*border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px;*/
-	border-right: 1px solid;
+.toolbar, .toolbar button {
+	background: rgb(31, 31, 31);
+	color: rgb(176, 176, 176);
+}
+
+.button_separator {
+	border-left: 1px solid rgb(176, 176, 176);
 }
